# cellstore

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
apps/: aging.py  bundle.py  data.py  plots.py  viewer.py
celljar/: __init__.py  bundle.py
celljar/harmonize/: __init__.py  harmonize_bills.py  harmonize_clo.py  harmonize_ecker_2015.py  harmonize_hnei.py  harmonize_matr.py  harmonize_mohtat.py  harmonize_nasa_pcoe.py  harmonize_naumann.py  harmonize_ornl_leaf.py  harmonize_schema.py  harmonize_snl_preger.py
celljar/ingest/: __init__.py  bills.py  clo.py  ecker_2015.py  hnei.py  matr.py  mohtat.py  nasa_pcoe.py  naumann.py  ornl_leaf.py  snl_preger.py
celljar/ingest/cyclers/: __init__.py  batteryarchive.py  biologic.py  common.py
cellstore/: __init__.py
cellstore/harmonize/: __init__.py  harmonize_hnei.py  harmonize_matr.py  harmonize_ornl_leaf.py  harmonize_schema.py
cellstore/ingest/: __init__.py  hnei.py  ornl_leaf.py
data/harmonized/: README.md  timeseries.parquet
data/harmonized/cells/: HNEI_PANASONIC_18650PF.json  ORNL_LEAF_2013.json
data/harmonized/tests/: HNEI_PANASONIC_18650PF_HPPC_-10C.json  HNEI_PANASONIC_18650PF_HPPC_-20C.json  HNEI_PANASONIC_18650PF_HPPC_0C.json  HNEI_PANASONIC_18650PF_HPPC_10C.json  HNEI_PANASONIC_18650PF_HPPC_25C.json  HNEI_PANASONIC_18650PF_HPPC_DIS5_10P_-10C.json  HNEI_PANASONIC_18650PF_HPPC_DIS5_10P_-20C.json  HNEI_PANASONIC_18650PF_HPPC_DIS5_10P_0C_1.json  HNEI_PANASONIC_18650PF_HPPC_DIS5_10P_0C_2.json  HNEI_PANASONIC_18650PF_HPPC_DIS5_10P_10C.json  HNEI_PANASONIC_18650PF_HPPC_DIS5_10P_25C_1.json  HNEI_PANASONIC_18650PF_HPPC_DIS5_10P_25C_2.json  HNEI_PANASONIC_18650PF_HPPC_DISPULSE_0C.json  ORNL_LEAF_2013_HPPC_10C.json  ORNL_LEAF_2013_HPPC_25C.json  ORNL_LEAF_2013_HPPC_40C.json
data/raw/bills/: SOURCE_DATA_PROVENANCE.md
data/raw/clo/: SOURCE_DATA_PROVENANCE.md
data/raw/ecker_2015/: SOURCE_DATA_PROVENANCE.md
data/raw/hnei/: SOURCE_DATA_PROVENANCE.md
data/raw/matr/: SOURCE_DATA_PROVENANCE.md
data/raw/mohtat/: SOURCE_DATA_PROVENANCE.md
data/raw/nasa_pcoe/: SOURCE_DATA_PROVENANCE.md
data/raw/naumann/: SOURCE_DATA_PROVENANCE.md
data/raw/ornl_leaf/: SOURCE_DATA_PROVENANCE.md
data/raw/snl_preger/: SOURCE_DATA_PROVENANCE.md
examples/: demo_end_to_end.py  publish_to_huggingface.py
schemas/: cell_metadata.schema.json  cycle_summary.schema.json  test_metadata.schema.json  timeseries.schema.json
scripts/: publish_pypi.sh  release_check.sh
tests/: test_batteryarchive_loader.py  test_biologic_loader.py  test_dataset_card.py  test_harmonizer_contract.py  test_invariants.py  test_schema_roundtrip.py
