[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "celljar"
version = "0.2.1"
description = "Public battery cell test data, harmonized and sealed in one schema (Parquet + JSON)."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Mihna Neerulpan", email = "mihnathul@gmail.com" },
]
keywords = [
    "battery",
    "battery-data",
    "electrochemistry",
    "data-harmonization",
    "open-data",
    "parquet",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Database",
    "Typing :: Typed",
]

dependencies = [
    "polars>=1.0",
    "pandas>=2.0",
    "pyarrow>=15.0",          # parquet
    "pandera>=0.18",          # runtime dataframe validation
    "numpy>=1.26",
    "scipy>=1.12",            # HNEI .mat
    "h5py>=3.8",              # MATR .mat (MATLAB v7.3 / HDF5)
]

[project.optional-dependencies]
dev = [
    "deptry>=0.20",
    "pytest>=8.0",
    "ruff>=0.3",
]
viewer = [
    "streamlit>=1.20",
    "plotly>=5.0",
    "duckdb>=0.10",           # parquet queries in the viewer
    "huggingface-hub>=0.20",  # metadata fallback fetch when local is empty
]

[project.urls]
Homepage = "https://github.com/mihnathul/celljar"
Repository = "https://github.com/mihnathul/celljar"
Issues = "https://github.com/mihnathul/celljar/issues"
Changelog = "https://github.com/mihnathul/celljar/blob/main/CHANGELOG.md"
Dataset = "https://huggingface.co/datasets/mihnathul/celljar"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.deptry]
# apps/ uses sys.path-based sibling imports (it's not a package, it's a
# streamlit script directory) - deptry can't follow those, so exclude.
extend_exclude = ["apps", "examples", "scripts"]
# Dev tools (dev) and viewer-only deps are not imported in the main package.
# Listed as "dev groups" so deptry doesn't flag them as unused.
optional_dependencies_dev_groups = ["dev", "viewer"]
